--- a/src/components/Accordion/Accordion.astro
+++ b/src/components/Accordion/Accordion.astro
@@ -10,7 +10,7 @@ import Volleyball from "@assets/images/accordion/Volleyball.jpg";
 ---
 
 <div class="wrapper breakout">
-    <div class="accordion breakout" id="accordion">
+    <div class="accordion breakout autoShow" id="accordion">
         <AccordionItem
             src={pool}
             icon="IcRoundPool"
