--- a/src/components/Index/Verlinkung.astro
+++ b/src/components/Index/Verlinkung.astro
@@ -10,5 +10,5 @@ const { href, label, classes } = Astro.props as Props;
 <a
     role="button"
     href={href}
-    class:list={["verlinkung", "btn", "btn-lg", classes]}>{label}</a
+    class:list={["verlinkung", "btn", "btn-lg", "box-s-5", classes]}>{label}</a
 >
