--- a/src/components/impressum/GridItem.astro
+++ b/src/components/impressum/GridItem.astro
@@ -3,7 +3,7 @@ const { titel, content } = Astro.props;
 ---
 
 <div>
-    <h4 class="bolt">{titel}:</h4>
+    <h4 class="font-bold">{titel}:</h4>
     <p>{content}</p>
 </div>
 
@@ -11,7 +11,6 @@ const { titel, content } = Astro.props;
     div {
         display: grid;
         grid-template-columns: 2fr 3fr;
-        margin-block: 4rem;
         gap: 1em;
     }
     @media screen and (max-width: 500px) {
