--- a/src/pages/impressum.astro
+++ b/src/pages/impressum.astro
@@ -38,3 +38,9 @@ import Grid from "../components/Grid.astro";
     </ImpressumGrid>
     <LizenzenGrid />
 </MainLayout>
+
+<style>
+    div {
+        @apply grid gap-7;
+    }
+</style>
