--- a/src/components/Index/OSM.astro
+++ b/src/components/Index/OSM.astro
@@ -5,7 +5,7 @@ import mapMobile from "../../assets/images/map/OSM_Mobile.webp";
 import { Image } from "astro:assets";
 ---
 
-<section class="flex flex-col-reverse lg:flex-row gap-4 my-10">
+<section class="flex flex-col-reverse lg:flex-row gap-4 my-10 box-s-5 rounded-2xl autoShow">
     <div
         class="flex items-center lg:items-start justify-center content-center gap-4 flex-col lg:basis-1/3 lg:pl-[10%]"
     >
@@ -37,13 +37,13 @@ import { Image } from "astro:assets";
                 </p>
                 <div class="modal-action flex-wrap gap-y-2">
                     <form method="dialog">
-                        <button class="btn btn-primary" id="load"
+                        <button class="btn btn-primary box-s-3" id="load"
                             >Karte laden</button
                         >
                     </form>
                     <form method="dialog">
                         <!-- if there is a button in form, it will close the modal -->
-                        <button class="btn">Schließen</button>
+                        <button class="btn box-s-3">Schließen</button>
                     </form>
                 </div>
             </div>
