--- a/src/components/Veranstaltungen/TermineItem.astro
+++ b/src/components/Veranstaltungen/TermineItem.astro
@@ -12,7 +12,7 @@ interface Props {
 }
 const { date, titel, description = "", index, id} = Astro.props;
 
-const colorArray = [
+const colorArrayOld = [
     "#DE3163", // Ein sanftes Apricot
     "#FF7F50", // Ein sanftes Gelb
     "#FFEF00", // Ein sanftes Mintgrün
@@ -26,8 +26,13 @@ const colorArray = [
     "#D9BF77", // Ein sanftes Goldbraun
     "#6B4226"  // Ein sanftes Dunkelbraun
 ];
-const colorArra = [
-    "#151615",
+const colorArray = [
+    "var(--accent)",
+    "var(--accent2)",
+    "var(--accent3)",
+    "var(--accent4)",
+    "var(--secondary)",
+    "var(--primary)",
 ];
 
 const textColor = getContrastYIQ(colorArray[index % colorArray.length]);
@@ -35,27 +40,28 @@ const textColor = getContrastYIQ(colorArray[index % colorArray.length]);
 const newId = sanitizeId(id ? id : titel);
 ---
 
-<li id={newId}>
+<li id={newId} class="gap-x-2 autoShow">
     <div class="timeline-middle">
         <svg
             xmlns="http://www.w3.org/2000/svg"
             height="24px"
             viewBox="0 -960 960 960"
             fill="currentColor"
-            class="h-5 w-5 text-primary"
+            class="h-5 w-5"
+            style={`color: ${colorArray[index % colorArray.length]};`}
             ><path
                 d="M480-280q83 0 141.5-58.5T680-480q0-83-58.5-141.5T480-680q-83 0-141.5 58.5T280-480q0 83 58.5 141.5T480-280Zm0 200q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"
             ></path></svg
         >
     </div>
     <div
-        class:list={["timeline-box", "shadow-xl", "!mb-10", "border-2",index % 2
-            ? "timeline-end"
-            : "timeline-start md:text-end"]}
-            style={`border-color: color-mix(in oklab, ${colorArray[index % colorArray.length]} 50%, transparent); background-color: color-mix(in oklab, ${colorArray[index % colorArray.length]} 5%, transparent);`}
+        class:list={["timeline-box", "box-s-5", "!mb-10", index % 2
+            ? "timeline-end rounded-tl-none"
+            : "timeline-start md:text-end rounded-tr-none"]}
+        style="background-color: white;"
     >
-        <div class="badge gap-2 text-lg py-3" style={`background-color: ${colorArray[index % colorArray.length]}; color: ${textColor}`}>
-            <time class="font-mono italic">{date}</time>
+        <div class="badge gap-2 text-lg py-3 box-s-1 my-4" style={`background-color: ${colorArray[index % colorArray.length]};`}>
+            <time class="font-mono">{date}</time>
         </div>
         <div class="text-3xl font-semibold hyphens-auto text-balance">{titel}</div>
         {description}
@@ -63,3 +69,5 @@ const newId = sanitizeId(id ? id : titel);
     </div>
     <hr />
 </li>
+
+<!-- style={`border-color: color-mix(in oklab, ${colorArray[index % colorArray.length]} 50%, transparent); background-color: color-mix(in oklab, ${colorArray[index % colorArray.length]} 5%, transparent);`} -->
