--- a/src/components/impressum/LizenzenGrid.astro
+++ b/src/components/impressum/LizenzenGrid.astro
@@ -2,8 +2,8 @@
 import { Icon } from "astro-icon/components";
 ---
 
-<div class="grid">
-  <h2>Lizenzen</h2>
+<div class="grid box-s-5">
+  <h2 class="font-bold text-2xl">Lizenzen</h2>
   <div class="item">
     <h4>Astro</h4>
     <div>
@@ -34,6 +34,23 @@ import { Icon } from "astro-icon/components";
         <Icon name="IcRoundGavel" />
       </a>
       <a href="https://github.com/JulietaUla/Montserrat">
+        <Icon name="github" />
+      </a>
+    </div>
+  </div>
+  <div class="item">
+    <h4>Work Sans</h4>
+    <div>
+      <a href="https://fonts.google.com/specimen/Work+Sans/">
+        <Icon name="IcRoundPublic" />
+      </a>
+      <a
+        title="SIL OPEN FONT LICENSE Version 1.1"
+        href="https://openfontlicense.org/open-font-license-official-text/"
+      >
+        <Icon name="IcRoundGavel" />
+      </a>
+      <a href="https://github.com/weiweihuanghuang/Work-Sans">
         <Icon name="github" />
       </a>
     </div>
@@ -72,23 +89,6 @@ import { Icon } from "astro-icon/components";
       </a>
     </div>
   </div>
-  <div class="item">
-    <h4>swup</h4>
-    <div>
-      <a href="https://swup.js.org/">
-        <Icon name="IcRoundPublic" />
-      </a>
-      <a
-        title="MIT-Lizenz"
-        href="https://github.com/swup/swup/blob/master/LICENSE"
-      >
-        <Icon name="IcRoundGavel" />
-      </a>
-      <a href="https://github.com/swup/swup">
-        <Icon name="github" />
-      </a>
-    </div>
-  </div>
 </div>
 
 <style>
@@ -100,10 +100,9 @@ import { Icon } from "astro-icon/components";
     max-width: 1500px;
     margin-inline: auto;
     gap: 30px;
-    background-color: var(--article);
-    padding: 4%;
-    border-radius: 16px;
-    border: var(--border-grey) 1px solid;
+    background-color: white;
+    padding: 1rem;
+    border-radius: 1rem;
   }
   .item {
     width: 100%;
@@ -127,5 +126,8 @@ import { Icon } from "astro-icon/components";
   [data-icon] {
     height: 24px;
     width: 24px;
+  }
+  h4 {
+    @apply font-bold;
   }
 </style>
